ncc/testsuite/negative/pinvoke.n
using System;
using System.Runtime.InteropServices;

class PlatformInvokeTest
{
    [DllImport("msvcrt.dll")]  // E: only methods marked with `extern'
    public static puts(_c : string) : int { 1 };
    
    [DllImport("msvcrt.dll")]
    internal extern static _flushall() : int;
}
